--- a/public/Usuario/css/estilos.css
+++ b/public/Usuario/css/estilos.css
@@ -374,9 +374,10 @@ footer{
 }
 .carritoC{
     width: 310px !important;
-    background-color: #EEEAEA;
+    
 }
 .tituloCarrito{
+    font-family: 'Open Sans',sans-serif;
    display: flex;
    justify-content: center;
    text-transform: uppercase;
@@ -388,6 +389,7 @@ footer{
    margin-top: 70px;
 }
 .producto-seccion{
+    font-family: 'Open Sans',sans-serif;
     width: 280px;
     height: 144px;
     background-color: #FAF8F8;
@@ -403,10 +405,12 @@ footer{
 .prod-secc-img{
   width: 109px;
   height: 144px;
-  background-size: cover3;
+  background-size: cover;
   object-fit: cover;
+  align-items: center;
 }
 .producto-secc-descrip{
+    font-family: 'Open Sans',sans-serif;
     width: 130px;
     height: 90px;
     background-color: #FAF8F8;
@@ -414,6 +418,7 @@ footer{
     margin-left: 120px;
 }
 .producto-seccion .producto-secc-titulo{
+    font-family: 'Open Sans',sans-serif;
  float: right;
  width: 130px;  
  height: 30px;
@@ -422,6 +427,7 @@ footer{
  margin-right: 30px;
 }
 .prod-secc-descrip{
+    font-family: 'Open Sans',sans-serif;
  margin-bottom: 2px;
  line-height: 10px;
  font-family: "Gorgia";
@@ -429,11 +435,134 @@ footer{
  color: #000;
  font-size: 0.9em;
 }
+
+.producto-seccion i{
+    float: left;
+    margin-top: -40px;
+    margin-left: 130px;
+    color: #f80909;
+}
+.separador i{
+    margin-top: 40px;
+    align-items: center;
+    color: #000000;
+    width: 80%;
+    margin-left: 135px;
+    margin-bottom: 10px;
+}
+
 .producto-secc-titulo .prod-secc-title{
-    font-family: "serif";
+    font-family: 'Open Sans',sans-serif;
     font-size: 1.2em;
     color: #000;
 }
+
+.contenido-valores{
+   
+    justify-content: space-between;
+    font-family: 'Open Sans',sans-serif;
+    color: #000000;
+    padding-top: 5px;
+    font-size: 15px;
+    text-transform: initial;
+    margin-bottom: 10px;
+}
+.contenido-valores .subt{
+    margin-left: 150px;
+    
+}
+.contenido-valores .envio{
+    margin-left: 162px;
+}
+.valores-compra .total{
+    margin-left: 170px;
+}
+.valores-compra .btn{
+    margin-top: 20px;
+    margin-left: 50px;
+    padding: 10px;
+    font-size: 20px;
+    color: #ffffff;
+    background-color: #545454;
+    border: none;
+}
+/*-----------------------------------------Estilos detalle de productos-------------------------------------------*/
+.img-prod{
+    margin-top:-20px;
+    margin-right: 55px;
+    background-color: #F2F4F4;
+    width: 200px;
+    height: 550px;
+}
+.img-22{
+    width: 545px;
+    height: 530px;
+    object-fit: cover;
+    margin: 10px 10px;
+}
+
+.seccion-detalle{
+    background-color: #F2F4F4;
+    float: right;
+    margin-top: -525px;
+    margin-left: 400px;
+    height: 500px;
+}
+
+.titulo-prod-det{
+    color: #0C0D0D;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.5em;
+    text-align: center;
+    text-transform: uppercase;
+    margin-top: 45px;
+    margin-bottom: 8px;
+}
+.precio-det{
+    color: #0C0D0D;
+    font-family: Arial;
+    text-align: center;
+    font-size: 1.58em;
+}
+.descripcion-det{
+    color:#4B4D4D;
+    text-align: center;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 1em;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+.titulo-color-det{
+    color:#000;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.3em;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+.tallas-det{
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.4em;
+    margin-bottom: 10px;
+}
+.boton-talla{
+    width: 45px;
+    height: 45px;
+    margin-top: 10px;
+    margin-bottom:10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    border-radius: 35%;
+    background-color: #EAEDED;
+}
+.boton-carrito{
+   margin-top: 10px;
+   width: 380px; 
+   margin-left: 10px;
+   font-family: Arial, Helvetica, sans-serif;
+}
+/*-----------------------------------Estilos Responsive---------------------------------*/
 @media screen and (max-width: 1200px){
 
     .main .grid-videos{
@@ -506,4 +635,5 @@ footer{
 }
 
 @media only screen and (max-width:1200px){.product-grid4{margin-bottom:30px}
+
 }
