--- a/public/Usuario/css/estilos.css
+++ b/public/Usuario/css/estilos.css
@@ -486,23 +486,23 @@ footer{
     background-color: #545454;
     border: none;
 }
+.remove{
+    
+}
 /*-----------------------------------------Estilos detalle de productos-------------------------------------------*/
 .img-prod{
     margin-top:-20px;
     margin-right: 55px;
-    background-color: #F2F4F4;
-    width: 200px;
     height: 550px;
 }
 .img-22{
-    width: 545px;
+    width: 465px;
     height: 530px;
     object-fit: cover;
     margin: 10px 10px;
 }
 
 .seccion-detalle{
-    background-color: #F2F4F4;
     float: right;
     margin-top: -525px;
     margin-left: 400px;
@@ -530,6 +530,8 @@ footer{
     font-family:Arial, Helvetica, sans-serif;
     font-size: 1em;
     margin-top: 15px;
+    margin-right: 5px;
+    margin-left: 5px;
     margin-bottom: 15px;
 }
 .titulo-color-det{
@@ -544,7 +546,12 @@ footer{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.4em;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+}
+.seleccion-tallas{
+ display: flex;
+ align-items: center;
+ justify-content: center;
 }
 .boton-talla{
     width: 45px;
@@ -553,15 +560,36 @@ footer{
     margin-bottom:10px;
     margin-left: 10px;
     margin-right: 10px;
-    border-radius: 35%;
+    border-radius: 15%;
     background-color: #EAEDED;
+    font-size: 1em;
+    font-family: Arial, Helvetica, sans-serif;
+    border: none;
 }
 .boton-carrito{
    margin-top: 10px;
    width: 380px; 
-   margin-left: 10px;
+   height: 45px;
+   margin-left: 55px;
+   font-size: 1.2em;
    font-family: Arial, Helvetica, sans-serif;
+   background-color: #191919 !important;
+   cursor: pointer;
+   box-shadow: 5px 5px 20px;
 }
+.button:hover{
+    background-color: #2C2B2B;
+}
+/*  Efecto zoom casero
+ .zoom{
+         Aumentamos la anchura y altura durante 2 segundos 
+        transition: width 2s, height 2s, transform 2s;
+    }
+    .zoom:hover{
+        /* tranformamos el elemento al pasar el mouse por encima al doble de
+           su tamaño con scale(2). 
+        transform : scale(2);
+    }*/
 /*-----------------------------------Estilos Responsive---------------------------------*/
 @media screen and (max-width: 1200px){
 
