--- a/public/Usuario/css/estilos.css
+++ b/public/Usuario/css/estilos.css
@@ -395,7 +395,6 @@ footer{
     background-color: #FAF8F8;
     margin-left: 15px;  
     margin-bottom: 5px;
-
 }
 .producto-seccimg{
     width: 110px;
@@ -410,7 +409,6 @@ footer{
   align-items: center;
 }
 .producto-secc-descrip{
-    font-family: 'Open Sans',sans-serif;
     width: 130px;
     height: 90px;
     background-color: #FAF8F8;
@@ -418,22 +416,24 @@ footer{
     margin-left: 120px;
 }
 .producto-seccion .producto-secc-titulo{
-    font-family: 'Open Sans',sans-serif;
+ font-family: Arial, Helvetica, sans-serif;
+ font-size: 1em;
+ color: #000;
  float: right;
  width: 130px;  
  height: 30px;
- background-color: #FAF8F8;
  margin-top: -140px;
  margin-right: 30px;
+ font-weight: 100;
 }
 .prod-secc-descrip{
-    font-family: 'Open Sans',sans-serif;
+ font-family: Arial, Helvetica, sans-serif;
  margin-bottom: 2px;
  line-height: 10px;
- font-family: "Gorgia";
  margin: 10px auto;
  color: #000;
  font-size: 0.9em;
+ font-weight: 100;
 }
 
 .producto-seccion i{
@@ -442,30 +442,53 @@ footer{
     margin-left: 130px;
     color: #f80909;
 }
-.separador i{
-    margin-top: 40px;
+.iconoseparador{
+    display:flex;
+    justify-content: center;
     align-items: center;
-    color: #000000;
-    width: 80%;
-    margin-left: 135px;
-    margin-bottom: 10px;
+}
+.iconoseparador i{
+ color: #000;
+ font-size: 1.2em;
+ margin-top: 10px;
+
+}
+.separadorLinea{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+}
+.separadorLinea hr{
+    margin-top: 15px;
+    width: 278px;
+    border: 1px solid black;
 }
 
 .producto-secc-titulo .prod-secc-title{
-    font-family: 'Open Sans',sans-serif;
-    font-size: 1.2em;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.3em;
     color: #000;
 }
 
-.contenido-valores{
-   
+.contenido-valores{   
     justify-content: space-between;
     font-family: 'Open Sans',sans-serif;
     color: #000000;
+    margin-left: 15px;
     padding-top: 5px;
-    font-size: 15px;
+    font-size: 1em;
     text-transform: initial;
     margin-bottom: 10px;
+}
+.divtotal{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+.divtotal label{
+    font-size: 1.1em;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .contenido-valores .subt{
     margin-left: 150px;
@@ -474,21 +497,23 @@ footer{
 .contenido-valores .envio{
     margin-left: 162px;
 }
-.valores-compra .total{
-    margin-left: 170px;
-}
+
 .valores-compra .btn{
     margin-top: 20px;
-    margin-left: 50px;
+    margin-left: 75px;
     padding: 10px;
     font-size: 20px;
     color: #ffffff;
     background-color: #545454;
     border: none;
 }
-.remove{
-    
+.CartProductos::-webkit-scrollbar{
+  width: 3px;
 }
+.CartProductos::-webkit-scrollbar-thumb{
+    background-color: #00;
+}
+
 /*-----------------------------------------Estilos detalle de productos-------------------------------------------*/
 .img-prod{
     margin-top:-20px;
