--- a/public/Usuario/css/estilos.css
+++ b/public/Usuario/css/estilos.css
@@ -507,11 +507,12 @@ footer{
     background-color: #545454;
     border: none;
 }
+/*---------Scroll Carrito de compras-------*/
 .CartProductos::-webkit-scrollbar{
-  width: 3px;
+  width: 4px;
 }
 .CartProductos::-webkit-scrollbar-thumb{
-    background-color: #00;
+    background-color: #000;
 }
 
 /*-----------------------------------------Estilos detalle de productos-------------------------------------------*/
@@ -521,7 +522,13 @@ footer{
     height: 550px;
 }
 .img-22{
-    width: 465px;
+    width: 670px ;
+    height: 530px;
+    object-fit: cover;
+    margin: 10px 10px;
+}
+.img-22.activo{
+    width: 545px;
     height: 530px;
     object-fit: cover;
     margin: 10px 10px;
@@ -592,10 +599,21 @@ footer{
     border: none;
 }
 .boton-carrito{
-   margin-top: 10px;
+    margin-left: 55px;
+    margin-top: 10px;
+    width: 380px; 
+    height: 45px;
+    font-size: 1.2em;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #191919 !important;
+    cursor: pointer;
+    box-shadow: 5px 5px 20px;
+}
+.boton-carrito.activo{
+    margin-top: 10px;
    width: 380px; 
    height: 45px;
-   margin-left: 55px;
+   margin-left: 30px;
    font-size: 1.2em;
    font-family: Arial, Helvetica, sans-serif;
    background-color: #191919 !important;
