--- a/public/Usuario/css/estilos.css
+++ b/public/Usuario/css/estilos.css
@@ -388,6 +388,14 @@ footer{
     width: 310px !important;
     
 }
+.iconoTotal{
+ background-color:#000;
+ border-radius: 60% !important;
+ width: 25px !important;
+ height: 20px !important;
+ margin-top: -20px;
+ float: right;
+}
 .tituloCarrito{
     font-family: 'Open Sans',sans-serif;
    display: flex;
@@ -454,6 +462,7 @@ footer{
     margin-top: -40px;
     margin-left: 130px;
     color: #f80909;
+    cursor:pointer;
 }
 .iconoseparador{
     display:flex;
@@ -626,7 +635,7 @@ footer{
     margin-top: 10px;
    width: 380px; 
    height: 45px;
-   margin-left: 30px;
+   margin-left: 20px;
    font-size: 1.2em;
    font-family: Arial, Helvetica, sans-serif;
    background-color: #191919 !important;
