--- a/public/Usuario/css/estilos.css
+++ b/public/Usuario/css/estilos.css
@@ -124,6 +124,26 @@ a{
     cursor: pointer;
 }
 
+.header .botones-header .carro label{
+    color: rgb(248, 142, 2);
+}
+
+.header .botones-header .carro .fas{
+    color: #828282;
+    font-size: 18px;
+    cursor: pointer;
+    border: none;
+    border-radius: 10px;
+    background: none;
+    width: 40px;
+    height: 40px;
+    padding: -7px 12px;
+}
+
+.header .botones-header a .fas:hover{
+    background:  #E7E7E7;
+
+}
 .header .botones-header button:hover{
     background: #E7E7E7;
 }
@@ -512,11 +532,8 @@ footer{
     font-family: Arial, Helvetica, sans-serif;
 }
 .contenido-valores .subt{
-    margin-left: 150px;
+    margin-left: 120px;
     
-}
-.contenido-valores .envio{
-    margin-left: 162px;
 }
 
 .valores-compra .btn{
@@ -657,17 +674,17 @@ footer{
     
 /*-----------------------------------LOGIN---------------------------------*/
 .login-box {
-    width: 320px;
+    width: 420px;
     height: 420px;
-    background: #000;
-    color: #fff;
-    top: -50%;
+    background: rgb(59, 59, 59);
+    color: rgb(255, 255, 255);
+    top: 50%;
     left: 50%;
     position: absolute;
     transform: translate(-50%, -50%);
     box-sizing: border-box;
     padding: 70px 30px;
-    margin-top: 300px;
+    margin-top: 350px;
   }
   
   .login-box .avatar {
@@ -696,6 +713,7 @@ footer{
   .login-box input {
     width: 100%;
     margin-bottom: 20px;
+    color: #ffffff;
   }
   
   .login-box input[type="text"], .login-box input[type="password"] {
@@ -712,15 +730,15 @@ footer{
     border: none;
     outline: none;
     height: 40px;
-    background: #b80f22;
-    color: #fff;
+    background: #f5f5f5;
+    color: rgb(0, 0, 0);
     font-size: 18px;
     border-radius: 20px;
   }
   
   .login-box input[type="submit"]:hover {
     cursor: pointer;
-    background: #ffc107;
+    background: #54ec40;
     color: #000;
   }
   
@@ -732,8 +750,90 @@ footer{
   }
   
   .login-box a:hover {
+    color: #54ec40;
+  }
+
+/*---------------------------------------Registro---------------------------------------------*/
+
+.registro-box {
+    width: 420px;
+    height: 580px;
+    background: rgb(59, 59, 59);
+    color: rgb(255, 255, 255);
+    top: -50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    box-sizing: border-box;
+    padding: 70px 30px;
+    margin-top: 350px;
+  }
+  
+  .registro-box .avatar {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    position: absolute;
+    top: -50px;
+    left: calc(50% - 50px);
+  }
+  
+  .registro-box h1 {
+    margin: 0;
+    padding: 0 0 20px;
+    text-align: center;
+    font-size: 22px;
+  }
+  
+  .registro-box label {
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+    display: block;
+  }
+  
+  .registro-box input {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  
+  .registro-box input[type="text"], .registro-box input[type="password"] {
+    border: none;
+    border-bottom: 1px solid #fff;
+    background: transparent;
+    outline: none;
+    height: 40px;
+    color: rgb(255, 255, 255);
+    font-size: 16px;
+  }
+  
+  .registro-box input[type="submit"] {
+    border: none;
+    outline: none;
+    height: 40px;
+    background: #ffffff;
+    color: rgb(0, 0, 0);
+    font-size: 18px;
+    border-radius: 20px;
+  }
+  
+  .registro-box input[type="submit"]:hover {
+    cursor: pointer;
+    background: #54ec40;
+    color: #000;
+  }
+  
+  .registro-box a {
+    text-decoration: none;
+    font-size: 12px;
+    line-height: 20px;
+    color: darkgrey;
+  }
+  
+  .registro-box a:hover {
     color: #fff;
   }
+
 /*---------------------------------------Estilos detalle Compra---------------------------------------------*/
 .titulo-Detcompra{
     margin-top: 10px;
@@ -799,8 +899,6 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0; 
 }
 
-
->>>>>>> b272732ea0d198f06ed4e2a910365a35b23b66a4
 /*-----------------------------------Estilos Responsive---------------------------------*/
 @media screen and (max-width: 1200px){
 
@@ -813,7 +911,7 @@ input[type=number]::-webkit-outer-spin-button {
     display:none;
     }
     .header .barra-busqueda input{
-    min-widht:70%;
+        min-width:70%;
     }
     }
     
