--- a/public/Usuario/css/estilos.css
+++ b/public/Usuario/css/estilos.css
@@ -835,6 +835,20 @@ footer{
   }
 
 /*---------------------------------------Estilos detalle Compra---------------------------------------------*/
+.tcabeza tr{
+    height: 45px  !important;
+}
+.table > tbody {
+    vertical-align: inherit;
+    text-align: center;
+}
+
+.tcabeza th{
+    font-size: 1em;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+
 .titulo-Detcompra{
     margin-top: 10px;
     font-family: Arial, Helvetica, sans-serif;
@@ -853,7 +867,6 @@ footer{
     vertical-align: top;
     font-size: 1.2em;
     font-weight: 700;
-    line-height: 30px;
     padding: 0 2px;
     min-width: 35px;
     text-align: center;
@@ -898,7 +911,37 @@ input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none; 
   margin: 0; 
 }
-
+.div-descripDet{
+    margin-top: 25px;
+}
+.nombreP-Details{
+    color: #000;
+    font-size: 1.2em;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.colorP-Details{
+    margin-top: -8px;
+    color: #000;
+    font-size: 1em;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.precio-Details{
+    color: #000;
+    font-size:  1.2em;
+    font-weight: 200;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 25px;
+    text-align: center;
+}
+.Div-Cantidad-details{
+    margin-top: -20px;
+    margin-left: 75px;
+    width: 80px;
+}
+.remove-details{
+    margin-top: 25px;
+}
+/**/
 /*-----------------------------------Estilos Responsive---------------------------------*/
 @media screen and (max-width: 1200px){
 
