--- a/public/Usuario/css/estilos.css
+++ b/public/Usuario/css/estilos.css
@@ -992,7 +992,7 @@ input[type=number]::-webkit-outer-spin-button {
     position: fixed;
     bottom: 50px;
     right: 50px;
-    background: #5A5EB9;
+    background: #000000;
     width: 80px;
     height: 80px;  
     border-radius: 50%;
@@ -1000,6 +1000,7 @@ input[type=number]::-webkit-outer-spin-button {
     padding: 28px;
     cursor: pointer;
     box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.6), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    z-index: 100;
   }
   
   .btn#my-btn {
@@ -1043,7 +1044,7 @@ input[type=number]::-webkit-outer-spin-button {
     cursor:pointer;
   }
   .chat-box-header {
-    background: #5A5EB9;
+    background: #000000;
     height:70px;
     border-top-left-radius:5px;
     border-top-right-radius:5px; 
@@ -1113,7 +1114,7 @@ input[type=number]::-webkit-outer-spin-button {
     box-shadow:none;
     border:none;
     border-radius:50%;
-    color:#5A5EB9;
+    color:#000000;
     width:35px;
     height:35px;  
   }
