--- a/public/Usuario/css/estilos.css
+++ b/public/Usuario/css/estilos.css
@@ -1250,6 +1250,11 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 30px;
   margin-top: -50px;
 }
+.iconoPayU{
+ width: 45px;
+ height: 40px;
+ object-fit: cover;
+}
 
 /*-----------------------------------Estilos Responsive---------------------------------*/
 @media screen and (max-width: 1200px){
